# microarch-ru-ddd-in-practice-python

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  env.example  main.py  pyproject.toml  test.py
.github/workflows/: ci.yaml
api/: config.py  lifespan.py  logging_config.py  main.py
api/adapters/background_jobs/: assign_orders_job.py  base.py  move_couriers_job.py  outbox_poller.py
api/adapters/http/: controllers.py  schemas.py
api/adapters/http/contract/: openapi.yaml
api/adapters/kafka/basket_confirmed/: Contract.proto  consumer.py  schemas.py
app/: main.py
core/application/use_cases/commands/: assign_orders.py  base.py  create_courier.py  create_order.py  move_couriers.py
core/application/use_cases/queries/: base.py  get_all_busy_couriers.py  get_all_couriers.py  get_not_completed_orders.py
core/domain/: consts.py
core/domain/events/: base.py
core/domain/model/courier_aggregate/: courier_aggregate.py  storage_place.py
core/domain/model/order_aggregate/: order_aggregate.py  order_status.py
core/domain/services/: dispatch_service.py  dispatch_service_interface.py
core/domain/shared_kernel/: location.py
core/ports/: base_repository_interface.py  courier_repository_interface.py  event_publisher_interface.py  geo_service_interface.py  order_repository_interface.py  unit_of_work.py
infrastructure/adapters/grpc/geo/: Contract_grpc.py  Contract_pb2.py  client.py
infrastructure/adapters/kafka/: event_publisher.py
infrastructure/adapters/postgres/: session.py  uow.py
infrastructure/adapters/postgres/migrations/: README.md  env.py
infrastructure/adapters/postgres/models/: __init__.py  courier_aggregate.py  (+1 more)
infrastructure/config/: database.py  geo_service.py  kafka.py  settings.py
infrastructure/di/: container.py
infrastructure/events/: __init__.py  integration_event_registry.py  integration_events.py
tests/: conftest.py
tests/fixtures/: base.py  mocks.py
tests/integration_tests/: test_assign_orders.py  test_basket_confiermed_event.py  test_basket_confirmed_event.py  test_courier_repository.py  test_create_order.py  test_get_all_busy_couriers.py  test_get_not_completed_orders.py  test_move_couriers.py  test_order_repository.py
(+17 files in other folders)
