[project]
name = "microarch-ru-ddd-in-practice-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolay Arkhipov",email = "cherrykolya@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "returns (>=0.25.0,<0.26.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
ruff = "^0.0.282"
black = "^23.7.0"
pytest-cov = "^6.2.1"


[tool.poetry.group.tools.dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
py_version = "auto"

[tool.ruff]
line-length = 120
